# icicle-ai-embed-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  openapi.json  pyproject.toml
.github/workflows/: build-push-deploy.yml
src/app/: auth.py  cache.py  embedder.py  main.py  schemas.py  settings.py
tests/: conftest.py  test_embedder_helpers.py  test_schemas.py
